[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Entities/IntractableEntity.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 20, 20 )

[node name="DoorObjectEntity" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
entity_popup_path = NodePath("EntityPopup")
entity_popup_key_path = NodePath("EntityPopup/Key")

[node name="EntityArea" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="EntityPopup" type="Panel" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -20.0
margin_top = -57.0
margin_right = 20.0
margin_bottom = -17.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Key" type="Label" parent="EntityPopup" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "E"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="ItemSprite" type="Sprite" parent="." index="2"]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]

[connection signal="body_exited" from="." to="." method="_on_body_exited"]


